feat: change namespace

--- a/packages/theme-chalk/styles/mixins/_config.scss
+++ b/packages/theme-chalk/styles/mixins/_config.scss
@@ -1,6 +1,6 @@
 // Corresponds to element-ui's packages/theme-chalk/src/mixins/config.scss
 
-$namespace: 'el' !default;
+$namespace: 'ep' !default;
 $common-separator: '-' !default;
 $element-separator: '__' !default;
 $modifier-separator: '--' !default;
